fix resizing on safari

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 .fillbox {
   display: flex;
-  border:0px solid red;
+  border:0px solid green;
   flex-direction: column;
   position:fixed;
   top:0;
@@ -31,9 +31,6 @@
   flex-direction: column;
 }
 
-.grow {
-  flex: 1.0;
-}
 
 
 /* ============ fonts ========== */
@@ -73,6 +70,8 @@ html {
   background-color: var(--tool-bg);
   display: flex;
   flex-direction: row;
+  box-sizing: content-box;
+  min-height: calc(1.0rem + 2 * var(--spacing));
 }
 .toolbar button {
   background-color: transparent;
@@ -106,6 +105,7 @@ html {
   padding: var(--spacing);
   background-color: transparent;
   transition: all 0.2s ease-out;
+  outline: none;
 }
 .item.selected {
   background-color: aquamarine;
@@ -222,38 +222,6 @@ html {
 /*  font-size: 100%;*/
 /*}*/
 
-
-/*.hbox > .grow {*/
-/*  flex: 1.0;*/
-/*}*/
-
-
-/*.popup-button-wrapper {*/
-/*  border: 1px solid red;*/
-/*  position: relative;*/
-/*}*/
-/*.popup-button-wrapper button {*/
-/*  border: 1px solid black;*/
-/*  box-sizing: border-box;*/
-/*  height: 2rem;*/
-/*}*/
-/*.popup-wrapper {*/
-/*  position: absolute;*/
-/*  background: white;*/
-/*  border: 1px solid black;*/
-/*  list-style: none;*/
-/*  padding: 0.5em 0;*/
-/*  min-width: 5em;*/
-/*  margin:0;*/
-/*  top:2rem;*/
-/*  left:0;*/
-/*}*/
-/*.popup-wrapper li {*/
-/*  padding: 0.25em 0.5em;*/
-/*}*/
-/*.popup-wrapper li:hover {*/
-/*  background: aqua;*/
-/*}*/
 
 /*.scroll {*/
 /*  overflow: scroll;*/
