--- a/src/mail/mail.css
+++ b/src/mail/mail.css
@@ -2,10 +2,10 @@
 .mailapp-grid {
     display: grid;
     grid-template-columns: 20rem 40rem 1fr;
-    grid-template-rows: 2rem 1fr;
+    grid-template-rows: calc(1rem + 2 * var(--spacing)) 1fr;
     background-color: #dddddd;
-    /*border: 5px solid red;*/
-    height: 100%;
+    border: 0px solid red;
+    flex: 1.0;
 }
 
 .mailapp-grid .grid-toolbar {
